Fix overflowing elements

--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@ nav {
   font-family: "Commissioner", sans-serif;
   font-size: 0.8rem;
   font-weight: 800;
+  max-width: 35rem;
+  margin: 1rem auto;
 }
 
 .author a:link,
@@ -180,6 +182,8 @@ ul.social > * {
 
 .article-header {
   justify-content: space-between;
+  max-width: 35rem;
+  margin: 0 auto;
 }
 
 .article-content {
@@ -193,12 +197,16 @@ ul.social > * {
   max-width: 35rem;
   font-size: 0.7rem;
   color: #444444;
+  max-width: 35rem;
+  margin: 1rem auto;
 }
 
 .article-footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-width: 35rem;
+  margin: 1rem auto;
 }
 
 h2.important {
@@ -238,6 +246,8 @@ h2.important {
 footer {
   margin: 0 4rem;
   font-size: 0.7rem;
+  max-width: 1100px;
+  margin: 2rem auto;
 }
 
 .horizontal-line {
